--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+html {
+	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+}
+
+body {
+	background: #ccc;
+}
