Initial implementation of paginator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
 	<h4>A simple depo for various components</h4>
 	<hr>
 
+	<h2>Paginators</h2>
+	<ar-ex-paginator></ar-ex-paginator>
+
 	<h2>Lists</h2>
 	<h3>Basic list</h3>
 	<ar-ex-list></ar-ex-list>
