Initial version of pageable list + example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,11 @@
 	<h2>Lists</h2>
 	<h3>Basic list</h3>
 	<ar-ex-list></ar-ex-list>
+
+
+	<h3>Pageable list</h3>
+	<ar-ex-pageable-list></ar-ex-pageable-list>
+
 	<br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
 
