add empty list placeholder + minor refactor

--- a/src/app/examples/components/list/list.component.html
+++ b/src/app/examples/components/list/list.component.html
@@ -11,6 +11,9 @@
 	<h3>List with preselected element</h3>
 	<ar-list [items]="basicItems" [selected]="basicItems[1]"></ar-list>
 
+	<h3>Empty list</h3>
+	<ar-list [items]="[]"></ar-list>
+
 
 	<h3>List with model items</h3>
 	<ar-list [items]="modelItems" [listItemTemplateRef]="listItemTemplateModelArray">
