--- a/src/app/examples/components/pageable-list/pageable-list.component.scss
+++ b/src/app/examples/components/pageable-list/pageable-list.component.scss
@@ -2,13 +2,18 @@ $border-color: #888;
 
 .ar-ex-pageable-list {
 	user-select: none;
-	box-shadow: 2px 2px 2px $border-color;
-	background-color: #ccc;
 
 	/deep/ .ar-pageable-list {
 		border: 1px $border-color solid;
+		background-color: white;
+		box-shadow: 2px 2px 2px $border-color;
 
 		.ar-list {
+			.emptyStock {
+				color: #be0000;
+				font-weight: bold;
+			}
+
 			.ar-list-item {
 				&:not(:last-child) {
 					border-bottom: 1px $border-color solid;
@@ -28,10 +33,14 @@ $border-color: #888;
 
 			.ar-list-item-opened {
 				padding: 5px 10px;
-				background-color: rgba( 255, 255, 255, 0.7 );
+				background-color: rgba(255, 255, 255, 0.7);
 				font-weight: normal;
 				border: 1px solid #ccc;
 				margin: 5px 0;
+			}
+
+			.ar-list-empty-placeholder {
+				color: #888;
 			}
 		}
 
@@ -50,11 +59,6 @@ $border-color: #888;
 				color: #aaa;
 			}
 		}
-	}
-
-	.emptyStock {
-		color: #be0000;
-		font-weight: bold;
 	}
 }
 
