--- a/src/app/examples/components/paginator/paginator.component.scss
+++ b/src/app/examples/components/paginator/paginator.component.scss
@@ -10,6 +10,8 @@
 		border: 1px solid #aaa;
 		border-radius: 3px;
 		margin: 0 2px;
+		min-width: 20px;
+		text-align: center;
 
 		&.selected {
 			background-color: #2c81f1;
