--- a/src/app/examples/components/list/list.component.html
+++ b/src/app/examples/components/list/list.component.html
@@ -4,9 +4,9 @@
 
 
 	<h3>List with string array items and with CUSTOM template</h3>
-	<ar-list [items]="basicItems" [listItemTemplateRef]="listItemTemplateForStringArray">
+	<ar-list [items]="basicItems">
+		<ng-template let-item>custom template: {{ item }}</ng-template>
 	</ar-list>
-	<ng-template #listItemTemplateForStringArray let-item>custom template: {{ item }}</ng-template>
 
 	<h3>List with preselected element</h3>
 	<ar-list [items]="basicItems" [selected]="basicItems[1]"></ar-list>
@@ -16,27 +16,27 @@
 
 
 	<h3>List with model items</h3>
-	<ar-list [items]="modelItems" [listItemTemplateRef]="listItemTemplateModelArray">
-	</ar-list>
-	<ng-template #listItemTemplateModelArray let-item let-selected="isSelected">
+	<ar-list [items]="modelItems">
+		<ng-template let-item let-selected="isSelected">
 		<span>{{ item.name }} - </span>
 		<span>({{ item.description }})</span>
 		<span [ngClass]="{ emptyStock: item.stock === 0}" >stock: {{ item.stock }}</span>
 	</ng-template>
+	</ar-list>	
 
 
 	<h3>List with selection dependent element ( click on them to open )</h3>
-	<ar-list [items]="modelItems" [listItemTemplateRef]="listItemTemplateModelArray2">
-	</ar-list>
-	<ng-template #listItemTemplateModelArray2 let-item let-isSelected="isSelected">
-		<div [attr.title]="isSelected ? 'click to close' : 'click to open' ">
-			<span>{{ item.name }} - </span>
+	<ar-list [items]="modelItems">
+		<ng-template let-item let-isSelected="isSelected">
+			<div [attr.title]="isSelected ? 'click to close' : 'click to open' ">
+				<span>{{ item.name }} - </span>
 
-			<span [ngClass]="{ emptyStock: item.stock === 0}" >stock: {{ item.stock }}</span>
-			<div class="ar-list-item-opened" *ngIf="isSelected">
-				<div class="emptyStock" *ngIf="item.stock===0">Sadly this item is out of stock</div>
-				<div>{{ item.description }}</div>
+				<span [ngClass]="{ emptyStock: item.stock === 0}" >stock: {{ item.stock }}</span>
+				<div class="ar-list-item-opened" *ngIf="isSelected">
+					<div class="emptyStock" *ngIf="item.stock===0">Sadly this item is out of stock</div>
+					<div>{{ item.description }}</div>
+				</div>
 			</div>
-		</div>
-	</ng-template>
+		</ng-template>
+	</ar-list>	
 </div>
