--- a/src/app/examples/components/pageable-list/pageable-list.component.html
+++ b/src/app/examples/components/pageable-list/pageable-list.component.html
@@ -2,13 +2,13 @@
 	<h3>Pageable list with custom item template and changeable page size</h3>
 
 	 <ar-pageable-list [items]="products$ | async"
-					  [totalPage]="totalPages$ | async"
-					  [totalItems]="productCount$ | async"
+					  [totalPages]="totalPages$ | async"
+					  [itemsCount]="productCount$ | async"
 					  [actualPage]="actualPage$ | async"
 					  [pageRangeWidth]="3"
-					  [itemsPerPage]="pageSize$ | async"
-					  (itemsPerPageChanged)="onItemsPerPageChanged( $event )"
-					  (pageChanged)="onPageChanged( $event )">
+					  [pageSize]="pageSize$ | async"
+					  (pageSizeChange)="onPageSizeChange( $event )"
+					  (pageChange)="onPageChange( $event )">
 
 		<ng-template let-item let-isSelected="isSelected">
 			<div [attr.title]="isSelected ? 'click to close' : 'click to open' ">
@@ -27,13 +27,31 @@
 	<h3>Empty list</h3>
 
 	<ar-pageable-list [items]="[]"
-					  [totalPage]="0"
+					  [totalPages]="0"
 					  [actualPage]="0"
 					  [pageRangeWidth]="3"
-					  [itemsPerPage]="10">
+					  [pageSize]="10">
 
 		 <ng-template let-item let-isSelected="isSelected">
 			{{ item.name }}
 		</ng-template> 
 	</ar-pageable-list>
+
+	<h3>Pageable list with PageableAdapterDirective</h3>
+	<ar-pageable-list arPageableAdapter
+		[pageableDataSource]="productService"
+		[pageRangeWidth]="3">
+
+		<ng-template let-item let-isSelected="isSelected">
+			<div [attr.title]="isSelected ? 'click to close' : 'click to open' ">
+				<span>{{ item.name }} - </span>
+
+				<span [ngClass]="{ emptyStock: item.stock === 0}" >stock: {{ item.stock }}</span>
+				<div class="ar-list-item-opened" *ngIf="isSelected">
+					<div class="emptyStock" *ngIf="item.stock===0">Sadly this item is out of stock</div>
+					<div>{{ item.description }}</div>
+				</div>
+			</div>
+		</ng-template>
+	</ar-pageable-list> 
 </div>
