Refactor provider & consumer interfaces, implement lazy-scrollable list + example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-	<h1> Welcome to Armada</h1>
+	 <h1> Welcome to Armada</h1>
 	<h4>A simple depo for various components</h4>
 	<hr>
 
@@ -12,7 +12,10 @@
 
 
 	<h3>Pageable list</h3>
-	<ar-ex-pageable-list></ar-ex-pageable-list>
+	<ar-ex-pageable-list></ar-ex-pageable-list> 
+
+	<h3>Lazy scrollable list</h3>
+	<ar-ex-lazy-scrollable-list></ar-ex-lazy-scrollable-list>
 
 	<br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
