--- a/src/app/lib/components/list/list.component.scss
+++ b/src/app/lib/components/list/list.component.scss
@@ -3,4 +3,12 @@
 		margin: 20px 0;
 		text-align: center;
 	}
+
+	.ar-list-item-container {
+		&.scrollable {
+			overflow: hidden;
+			overflow-y: auto;
+		}
+	}
 }
+
