--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
 	<h4>A simple depo for various components</h4>
 	<hr>
 
+	<h2>Cards</h2>
+	<ar-ex-card></ar-ex-card>
+
 	<h2>Paginators</h2>
 	<ar-ex-paginator></ar-ex-paginator>
 
