--- a/src/app/examples/components/card/card.component.scss
+++ b/src/app/examples/components/card/card.component.scss
@@ -3,7 +3,7 @@
   background: white;
   box-shadow: 2px 2px 2px rgba( 88, 88, 88 , 0.25 );
 
-  .ar-card-header, .ar-card-footer {
+  /deep/ .ar-card-header, /deep/ .ar-card-footer {
 	background: #444;
 	color: white;
   }
