--- a/src/app/lib/components/card/card.component.html
+++ b/src/app/lib/components/card/card.component.html
@@ -1,9 +1,20 @@
 <div class="ar-card">
-	<ng-content select="ar-card-header"></ng-content>
+	<div class="ar-card-header" *ngIf="headerTemplate || collapsible">
+		<button class="collapse-toggle-button"
+				*ngIf="collapsible"
+				[attr.title]=" opened ? 'close card' : 'open card' "
+				(click)="onCollapseToggle()">
+			<i class="fa" aria-hidden="true" [ngClass]="{ 'fa-caret-square-o-down': !opened, 'fa-caret-square-o-up': opened }"></i>
+		</button>
 
-	<div class="ar-card-content-container" *ngIf="isOpened" [@collapseInOut]="collapsibleAnimationState">
-		<ng-content select="ar-card-content" ></ng-content>
+		<ng-container *ngTemplateOutlet="headerTemplate"></ng-container>
 	</div>
 
-	<ng-content select="ar-card-footer"></ng-content>
+	<div class="ar-card-content" *ngIf="contentTemplate && isContentVisible" [@collapseInOut]="collapsibleAnimationState">
+		<ng-container *ngTemplateOutlet="contentTemplate"></ng-container>
+	</div>
+
+	<div class="ar-card-footer" *ngIf="footerTemplate">
+		<ng-container *ngTemplateOutlet="footerTemplate"></ng-container>
+	</div>
 </div>
