--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
 	<h2>Cards</h2>
 	<ar-ex-card></ar-ex-card>
 
+	<h2>Modal dialogs</h2>
+	<ar-ex-modal-dialog></ar-ex-modal-dialog>
+
 	<h2>Paginators</h2>
 	<ar-ex-paginator></ar-ex-paginator>
 
