Implement close button

--- a/src/app/examples/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/examples/components/modal-dialog/modal-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="ar-ex-modal-dialog">
 	<h3>Simple modal dialog</h3>
-	<ar-modal-dialog [visible]="isDialogVisible[0]">
+	<ar-modal-dialog [visible]="isDialogVisible[0]" [closable]="true" (closed)="onCloseDialog( 0 )">
 		<ng-template arNamedTemplate="title">
 			Simple modal dialog
 		</ng-template>
