--- a/src/app/lib/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/lib/components/modal-dialog/modal-dialog.component.html
@@ -1,11 +1,12 @@
 <div class="modal-overlay" @fadeOut *ngIf="visible">
 	<div class="modal-dialog" role="dialog" @rollDown>
 		<div class="modal-dialog-header">
-			<div class="modal-dialog-icon"></div>
 			<div class="modal-dialog-title">
 				<ng-container *ngTemplateOutlet="titleTemplate"></ng-container>
 			</div>
-			<div class="modal-dialog-close"></div>
+			<div class="modal-dialog-close" *ngIf="closable">
+				<i class="fa fa-times" aria-hidden="true" (click)="onClose()"></i>
+			</div>
 		</div>
 		<div class="modal-dialog-content">
 			<ng-container *ngTemplateOutlet="contentTemplate"></ng-container>
