add icon to title

--- a/src/app/examples/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/examples/components/modal-dialog/modal-dialog.component.html
@@ -2,6 +2,7 @@
 	<h3>Simple modal dialog</h3>
 	<ar-modal-dialog [visible]="isDialogVisible[0]" [closable]="true" (closed)="onCloseDialog( 0 )">
 		<ng-template arNamedTemplate="title">
+			<i class="fa fa-question-circle" aria-hidden="true"></i>
 			Simple modal dialog
 		</ng-template>
 		<ng-template arNamedTemplate="content">
