--- a/src/app/lib/components/modal-dialog/modal-dialog.component.scss
+++ b/src/app/lib/components/modal-dialog/modal-dialog.component.scss
@@ -5,19 +5,18 @@
   bottom: 0;
   left: 0;
   z-index: 1000;
-  background-color: rgba( 0,0,0, 0.4 );
+  background-color: rgba(0, 0, 0, 0.4);
 
   .modal-dialog {
 	max-width: 500px;
 	margin: 60px auto;
 	border: 1px solid #444;
 	background-color: white;
-	border-radius: 5px;
+	border-radius: 6px;
 
 	.modal-dialog-title,
-	.modal-dialog-content,
 	.modal-dialog-footer {
-	  padding: 5px 10px;
+	  padding: 10px 10px;
 	}
 
 	.modal-dialog-header,
@@ -25,6 +24,7 @@
 	  color: white;
 	  background-color: #444;
 	}
+
 	.modal-dialog-header {
 	  display: flex;
 	  justify-content: space-between;
@@ -49,7 +49,8 @@
 	  }
 	}
 
-
-
+	.modal-dialog-content {
+	  padding: 15px 10px;
+	}
   }
 }
